[package]
name = "dioxus-use-gesture"
description = "Gesture interaction library for Dioxus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-spring = "0.1.0"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
log = "0.4.20"
dioxus-logger = "0.4.1"
