[package]
name = "dioxus-use-gesture"
description = "Gesture interaction library for Dioxus"
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = { version = "0.6.0-alpha.3", features = ["web"] }
dioxus-spring = "0.3.0-alpha.4"
dioxus-use-mounted = "0.3.0-alpha.4"
web-sys = "0.3.72"
wasm-bindgen = "0.2.95"
